--- a/app/src/main/res/layout/list_item_ingredient_list.xml
+++ b/app/src/main/res/layout/list_item_ingredient_list.xml
@@ -18,7 +18,7 @@
             android:gravity="left"
             android:textSize="14dp"
             android:layout_weight="1"
-            android:textColor="@color/Brown"/>
+            android:textColor="@color/TextMain"/>
 
         <TextView
             android:id="@+id/amount"
@@ -29,7 +29,7 @@
             android:gravity="right"
             android:textSize="14dp"
             android:layout_weight="1"
-            android:textColor="@color/Brown"/>
+            android:textColor="@color/TextMain"/>
 
     </LinearLayout>
 
@@ -37,6 +37,6 @@
         android:layout_width="match_parent"
         android:layout_marginTop="5dp"
         android:layout_height="1dp"
-        android:background="@color/Green"/>
+        android:background="@color/AssetAccentColor"/>
 
 </LinearLayout>
