--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:tabSelectedTextColor="@color/TextMain"
+        app:tabTextColor="@color/TextSecondary"
+        app:tabBackground="@color/BackgroundSecondary"
+        android:backgroundTint="@color/BackgroundSecondary"
         app:tabMode="fixed" />
 
     <androidx.viewpager.widget.ViewPager
