--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -7,22 +7,6 @@
     android:orientation="vertical"
     tools:context=".activities.RecipeDetailActivity"
     android:background="@color/Background">
-    <!--
-    data class SpoonacularIngredient(
-        val amount: String,
-        val unit: String,
-        val name: String
-    )
-
-    data class RecipeDetailResponse(
-        val id: Int,
-        val title: String,
-        val image: String,
-        val readyInMinutes: Int,
-        val sourceUrl: String,
-        val extendedIngredients: List<SpoonacularIngredient>
-    )
-    -->
 
     <androidx.core.widget.ContentLoadingProgressBar
         android:layout_width="match_parent"
@@ -41,83 +25,101 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/recipeImage"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:scaleType="fitCenter"
-            android:padding="10dp"/>
-
-        <TextView
-            android:id="@+id/recipeTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
-            android:layout_marginBottom="20sp"
-            android:text="title"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:textColor="@color/Brown"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            <ImageView
+                android:id="@+id/recipeImage"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:scaleType="fitCenter"
+                android:padding="10dp"
+                android:background="@color/BackgroundSecondary"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/recipeTitle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:textSize="24dp"
-                android:text="Cook time: "
-                android:textColor="@color/Brown"/>
+                android:paddingTop="20sp"
+                android:paddingBottom="20sp"
+                android:text="title"
+                android:gravity="center"
+                android:textSize="30dp"
+                android:textColor="@color/TextMain"
+                android:background="@color/BackgroundSecondary"/>
 
-            <TextView
-                android:id="@+id/cookTime"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ready in mins"
-                android:layout_weight="1"
-                android:textSize="24dp"
-                android:textColor="@color/Brown"/>
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:background="@color/BackgroundSecondary">
 
-            <TextView
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="20dp"
+                    android:text="Cook time: "
+                    android:textColor="@color/TextMain"/>
+
+                    <TextView
+                        android:id="@+id/cookTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ready in mins"
+                        android:textSize="20dp"
+                        android:textColor="@color/TextMain"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:textSize="20dp"
+                        android:text="minutes"
+                        android:textColor="@color/TextMain"/>
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:textSize="24dp"
-                android:text="minutes"
-                android:textColor="@color/Brown"/>
+                android:padding="10dp"
+                android:id="@+id/recipeIngredientListContainer"
+                />
 
-        </LinearLayout>
+            <Button
+                android:id="@+id/gotoRecipeOnline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                style="@style/appButton"
+                android:text="go to recipe url"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/recipeIngredientListContainer"
-            />
+            <Button
+                android:id="@+id/addToRecipeBook"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                style="@style/appButton"
+                android:text="add to a recipe book"/>
 
-        <Button
-            android:id="@+id/gotoRecipeOnline"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="go to recipe url"
-            android:background="@color/Green"
-            android:textColor="@color/LightYellow"/>
+            <EditText
+                android:id="@+id/recipeNotes"
+                android:inputType="textMultiLine"
+                android:minLines="4"
+                android:lines="20"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/appInputMultiline"
+                android:hint="Notes..."
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginBottom="15dp"/>
 
-        <Button
-            android:id="@+id/addToRecipeBook"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="add to a recipe book"
-            android:background="@color/Green"
-            android:textColor="@color/LightYellow"/>
+            <Button
+                android:id="@+id/updateRecipeNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                style="@style/appButton"
+                android:text="Update Saved Recipe Notes"/>
 
         </LinearLayout>
 
