--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,7 +20,7 @@
             android:text="@string/login"
             android:gravity="center"
             android:textSize="24dp"
-            android:textColor="@color/Brown"/>
+            android:textColor="@color/TextMain"/>
 
         <EditText
             android:id="@+id/loginEmail"
@@ -29,9 +29,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
-            android:hint="@string/email"
-            android:textSize="18dp"
-            android:textColor="@color/Brown"/>
+            style="@style/appInput"
+            android:hint="@string/email"/>
 
         <EditText
             android:id="@+id/loginPassword"
@@ -40,18 +39,16 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:inputType="textPassword"
-            android:hint="@string/password"
-            android:textSize="18dp"
-            android:textColor="@color/Brown"/>
+            style="@style/appInput"
+            android:hint="@string/password"/>
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="@string/login"
-            android:background="@color/Green"
-            android:textColor="@color/LightYellow"/>
+            style="@style/appButton"
+            android:text="@string/login"/>
 
     </LinearLayout>
 
