--- a/app/src/main/res/layout/list_item_recipe_book_list.xml
+++ b/app/src/main/res/layout/list_item_recipe_book_list.xml
@@ -6,22 +6,20 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="name"
         android:layout_weight="1"
         android:textSize="20dp"
-        android:textColor="@color/Brown"/>
+        android:textColor="@color/TextMain"/>
 
     <Button
         android:id="@+id/viewRecipeBookButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="View"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:background="@color/Green"
-        android:textColor="@color/LightYellow"/>
+        style="@style/appButton"
+        android:text="Select"
+        android:gravity="center"/>
 
 </LinearLayout>
