--- a/app/src/main/res/layout/activity_recipe_book_contents.xml
+++ b/app/src/main/res/layout/activity_recipe_book_contents.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:id="@+id/bookTitle"
-        android:text="noname"
+        android:text="@string/placeholder"
         android:textSize="24dp"
         android:gravity="center"
         android:textColor="@color/TextMain"/>
