--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="20sp"
                 android:paddingBottom="20sp"
-                android:text="title"
+                android:text="@string/placeholder"
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/TextMain"
@@ -57,14 +57,14 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:textSize="20dp"
-                    android:text="Cook time: "
+                    android:text="@string/cooktime"
                     android:textColor="@color/TextMain"/>
 
                     <TextView
                         android:id="@+id/cookTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="ready in mins"
+                        android:text="@string/placeholder"
                         android:textSize="20dp"
                         android:textColor="@color/TextMain"/>
 
@@ -73,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:textSize="20dp"
-                        android:text="minutes"
+                        android:text="@string/minutes"
                         android:textColor="@color/TextMain"/>
 
             </LinearLayout>
@@ -91,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 style="@style/appButton"
-                android:text="go to recipe url"/>
+                android:text="@string/url"/>
 
             <Button
                 android:id="@+id/addToRecipeBook"
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 style="@style/appButton"
-                android:text="add to a recipe book"/>
+                android:text="@string/addtobook"/>
 
             <EditText
                 android:id="@+id/recipeNotes"
@@ -109,7 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/appInputMultiline"
-                android:hint="Notes..."
+                android:hint="@string/notes"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="15dp"/>
 
@@ -119,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 style="@style/appButton"
-                android:text="Update Saved Recipe Notes"/>
+                android:text="@string/update"/>
 
         </LinearLayout>
 
