--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Search Results"
+        android:text="@string/results"
         android:textSize="24dp"
         android:gravity="center"
         android:textColor="@color/TextMain"
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="End of Search Results"
+        android:text="@string/endresults"
         android:textSize="14dp"
         android:gravity="center"
         android:textColor="@color/TextSecondary"
