--- a/app/src/main/res/layout/list_item_ingredient_list.xml
+++ b/app/src/main/res/layout/list_item_ingredient_list.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="name"
+            android:text="@string/placeholder"
             android:gravity="left"
             android:textSize="14dp"
             android:layout_weight="1"
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="amount"
+            android:text="@string/placeholder"
             android:gravity="right"
             android:textSize="14dp"
             android:layout_weight="1"
