--- a/app/src/main/res/layout/list_item_recipe_book_recipe_list.xml
+++ b/app/src/main/res/layout/list_item_recipe_book_recipe_list.xml
@@ -15,7 +15,7 @@
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="name"
+            android:text="@string/placeholder"
             android:layout_weight="2"
             android:scrollHorizontally="true"
             android:ellipsize="end"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="@style/appButton"
-            android:text="View"
+            android:text="@string/view"
             android:gravity="center"/>
     </LinearLayout>
 
