--- a/app/src/main/res/layout/list_item_search_result.xml
+++ b/app/src/main/res/layout/list_item_search_result.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="name"
+                android:text="@string/placeholder"
                 android:gravity="left"
                 android:textSize="20dp"
                 android:textColor="@color/TextMain"/>
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:textSize="15dp"
-                    android:text="Cook Time: "
+                    android:text="@string/cooktime"
                     android:textColor="@color/TextMain"/>
 
                 <TextView
@@ -55,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
-                    android:text="cook time (min)"
+                    android:text="@string/cooktime"
                     android:gravity="center"
                     android:textSize="15dp"
                     android:textColor="@color/TextMain"/>
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/appButton"
-        android:text="go to recipe"
+        android:text="@string/gotorecipe"
         android:gravity="center"/>
 
     <View
